added all thing

--- a/style.css
+++ b/style.css
@@ -2,10 +2,107 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.heading {
+.back {
+    background-image: url(helpless-image/donation5.jpg);
+    height: 600px;
+}
+
+.middle {
     text-align: center;
+    padding: 150px;
+}
+
+.heading {
+    font-size: 50px;
+    text-align: center;
+    color: white;
+    margin-top: 5px;
 }
 
 .paragraph {
     text-align: center;
+    color: yellow;
+    padding: 25px;
+}
+
+.btn {
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.text {
+    text-align: center;
+    padding: 50px;
+}
+
+.half {
+    padding: 50px;
+    text-align: center;
+}
+
+.box {
+    display: flex;
+    border: 100px;
+    justify-content: space-evenly;
+    color: gray;
+}
+
+.one {
+    height: 50px;
+    width: 60px;
+    text-align: center;
+    background-color: rgb(246, 242, 242);
+}
+
+.two {
+    height: 50px;
+    width: 60px;
+    text-align: center;
+    background-color: rgb(240, 229, 217);
+    border: 2px solid orange;
+    color: orange;
+}
+
+.three {
+    height: 50px;
+    width: 60px;
+    text-align: center;
+    background-color: rgb(246, 242, 242);
+}
+
+.four {
+    height: 50px;
+    width: 60px;
+    text-align: center;
+    background-color: rgb(246, 242, 242);
+}
+
+.five {
+    height: 50px;
+    width: 60px;
+    text-align: center;
+    background-color: rgb(246, 242, 242);
+}
+
+.donate {
+    text-align: center;
+    margin-top: 40px;
+}
+
+input {
+    border: none;
+    border-bottom: 1px solid gray;
+    text-align: center;
+}
+
+.button {
+    text-align: center;
+    margin-top: 40px;
+    color: white;
+    background-color: red;
+    border-radius: 10px;
+    padding: 15px;
+    margin-left: 520px;
 }
