--- a/style.css
+++ b/style.css
@@ -106,3 +106,88 @@ input {
     padding: 15px;
     margin-left: 520px;
 }
+
+.thirty1 {
+    text-align: center;
+    margin-top: 90px;
+}
+
+.thirty3 {
+    text-align: center;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.card-plus {
+    display: flex;
+    border: 100px;
+    padding: 30px;
+    justify-content: space-evenly;
+    border-radius: 10px;
+}
+
+.card1 {
+    background-color: rgb(238, 139, 139);
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.card2 {
+    background-color: rgb(170, 208, 224);
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.card3 {
+    background-color: rgb(242, 242, 183);
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.picture {
+    width: 50px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.picture2 {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.picture3 {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.h1 {
+    text-align: center;
+}
+
+.h2 {
+    text-align: center;
+}
+
+.h3 {
+    text-align: center;
+}
+
+.p1 {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.p2 {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.p3 {
+    margin-left: 10px;
+    margin-right: 10px;
+}
