--- a/style.css
+++ b/style.css
@@ -191,3 +191,92 @@ input {
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.donate {
+    display: flex;
+    padding: 30px;
+    justify-content: space-evenly;
+}
+
+.donate1 {
+    width: 700px;
+    height: 200px;
+    margin-right: 50px;
+    margin-top: 100px;
+}
+
+.donate2 {
+    width: 500px;
+    margin-top: 20px;
+    height: 450px;
+}
+
+.color {
+    color: white;
+    background-color: red;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.eight {
+    display: flex;
+    padding: 30px;
+    justify-content: space-evenly;
+}
+
+.nine {
+    width: 700px;
+    height: 200px;
+    margin-right: 5px;
+    margin-top: 100px;
+    margin-left: 50px;
+}
+
+.elaven {
+    width: 500px;
+    margin-top: 20px;
+    height: 450px;
+}
+
+.ten {
+    color: white;
+    background-color: red;
+    border-radius: 10px;
+    padding: 15px;
+    margin-left: 170px;
+}
+
+.align {
+    text-align: center;
+}
+
+.fifteen {
+    display: flex;
+    padding: 30px;
+    justify-content: space-evenly;
+}
+
+.sixteen {
+    width: 700px;
+    height: 200px;
+    margin-right: 50px;
+    margin-top: 100px;
+}
+
+.seventeen {
+    width: 500px;
+    margin-top: 20px;
+    height: 450px;
+}
+
+.eighteen {
+    color: white;
+    background-color: red;
+    border-radius: 10px;
+    padding: 15px;
+    margin-left: 170px;
+}
+
+.ninteen {
+    text-align: center;
+}
