--- a/style.css
+++ b/style.css
@@ -280,3 +280,32 @@ input {
 .ninteen {
     text-align: center;
 }
+
+.updates {
+    margin-top: 60px;
+    text-align: center;
+}
+
+.subscribe {
+    display: flex;
+    text-align: center;
+    margin-top: 60px;
+    background-color: rgb(243, 225, 225);
+    padding-block: 50px;
+    padding-left: 50px;
+    margin-left: 400px;
+    margin-right: 400px;
+}
+
+.text5 {
+    text-align: center;
+    margin-left: 80px;
+    margin-right: 80px;
+}
+
+.button5 {
+    color: white;
+    background-color: red;
+    border-radius: 10px;
+    padding: 15px;
+}
