added full project

--- a/style.css
+++ b/style.css
@@ -309,3 +309,19 @@ input {
     border-radius: 10px;
     padding: 15px;
 }
+
+.finish {
+    margin-top: 100px;
+    text-align: center;
+    background-color: black;
+    color: red;
+}
+
+.finish2 {
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 20px;
+}
+
+.finish1 {
+    color: white;
+}
